<resources>
    <string name="app_name">Antiques Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>

    <string name="title_activity_add_new_item">Add New Item</string>
    <string name="add_new_item_banner">New Piece</string>
    <string name="tv_title">Title:</string>
    <string name="ed_hint_title">e.g. Pocket Watch</string>
    <string name="tv_category">Category:</string>
    <string name="tv_time_period">Time Period:</string>
    <string name="tv_condition">Condition:</string>
    <string name="btn_add">Add</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="night_mode_key">Night Mode</string>
    <string name="night_mode_title">Dark/Night Mode</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Use Night/Dark Mode (unless disabled in OS Settings)</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_content">Content</string>
    <string name="title_activity_view_item_card">Item Information</string>
    <string name="filepath_save">/data/data/com.example.antiquescatalog/files/save.txt</string>
    <string name="btn_upload_image_text">Attach Picture</string>
    <string name="take_picture">Take Picture</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ex_this_is_a_nice_piece">ex. This is a nice piece!</string>
    <string name="note">Note:</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>