<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal">

    <!--Title-->
    <TextView
        android:id="@+id/tv_label_title"
        style="@style/rv_inner_card_tv.Bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ic_tv_title"
        style="@style/rv_inner_card_tv"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_time_period"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Category-->
    <TextView
        android:id="@+id/tv_label_category"
        style="@style/rv_inner_card_tv.Bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tv_category"
        app:layout_constraintEnd_toStartOf="@+id/tv_category"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_title" />

    <TextView
        android:id="@+id/ic_tv_category"
        style="@style/rv_inner_card_tv"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_time_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_title" />

    <!--Time Period-->
    <TextView
        android:id="@+id/tv_label_time_period"
        style="@style/rv_inner_card_tv.Bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tv_time_period"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_period"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_category" />

    <TextView
        android:id="@+id/ic_tv_time_period"
        style="@style/rv_inner_card_tv"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_time_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_category" />

    <!--Condition-->
    <TextView
        android:id="@+id/tv_label_condition"
        style="@style/rv_inner_card_tv.Bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/tv_condition"
        app:layout_constraintEnd_toStartOf="@+id/tv_condition"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_time_period" />

    <TextView
        android:id="@+id/ic_tv_condition"
        style="@style/rv_inner_card_tv"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_time_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_time_period" />

</androidx.constraintlayout.widget.ConstraintLayout>